src/objects/Spend_Type__c.object
<CustomObject>
    <description>Spend types</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Spent Amount</description>
        <inlineHelpText>Spent Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spend_Type__c</fullName>
        <description>Spend types according to spend nature for different expenses</description>
        <inlineHelpText>Spend types according to spend nature for different expenses</inlineHelpText>
        <label>Spend Type</label>
        <picklist>
            <picklistValues>
                <fullName>Air Travel</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ground travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Breverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Expenses</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Spend Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPNDT-{000000}</displayFormat>
        <label>Spend Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>